--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
