--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
+    "react-window": "^2.2.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "tailwindcss": "^4.1.17"
